# django-postgres-extra

./: .coveragerc  .gitignore  .prospector.yaml  .pylintrc  .readthedocs.yml  .scrutinizer.yml  CONTRIBUTING.md  Dockerfile  Dockerfile-py39-DJ-32  LICENSE  Makefile  README.md  README.rst  docker-compose.tests.yml  docker-compose.yml  manage.py  mkdocs.yml  pyproject.toml  pytest-benchmark.ini  pytest.ini  requirements-all.txt  requirements-test.txt  settings.py  setup.cfg  setup.py  test.py  tox.ini
.benchmarks/Darwin-CPython-3.5-64bit/: 0002_benchmark.json
.circleci/: config.yml
docs/: conflict-handling.md  conflict_handling.md  db-engine.md  deletion.md  extra.css  features.md  hstore.md  index.md  indexes.md  major-releases.md  manager.md  managers-models.md  managers_models.md  materialized_views.md  signals.md  table-partitioning.md  table_partitioning.md
docs/source/: annotations.rst  api_reference.rst  conf.py  conflict_handling.rst  deletion.rst  expressions.rst  hstore.rst  index.rst  indexes.rst  installation.rst  locking.rst  major_releases.rst  managers_models.rst  schemas.rst  settings.rst  table_partitioning.rst  views.rst
docs/source/snippets/: django_doc_links.rst  manager_model_warning.rst  postgres_doc_links.rst
postgres_extra/: __init__.py  forms.py  hstore_index.py  localized_value.py  mixins.py  models.py  util.py
postgres_extra/db/: base.py
postgres_extra/fields/: __init__.py  hstore_field.py  localized_autoslug_field.py  localized_bleach_field.py  localized_field.py  localized_uniqueslug_field.py
psqlextra/: __init__.py  _version.py  apps.py  auto_partition.py  compiler.py  conflict.py  datastructures.py  error.py  expressions.py  init.py  locking.py  lookups.py  manager.py  materialized_view.py  models.py  query.py  schema.py  settings.py  signals.py  sql.py  type_assertions.py  types.py  util.py
psqlextra/backend/: base.py  base_impl.py  hstore_required.py  hstore_unique.py  introspection.py  materialized_view.py  operations.py  schema.py
psqlextra/backend/migrations/: README.md  __init__.py  patched_autodetector.py  patched_migrations.py  patched_project_state.py  state.py
psqlextra/backend/migrations/operations/: __init__.py  add_check_constraint_concurrently.py  add_default_partition.py  add_hash_partition.py  add_list_partition.py  add_list_sub_partition.py  add_range_partition.py  apply_state.py  create_materialized_view_model.py  create_partitioned_model.py  create_view_model.py  delete_default_partition.py  delete_hash_partition.py  delete_list_partition.py  delete_materialized_view_model.py  delete_partition.py  delete_partitioned_model.py  delete_range_partition.py  delete_view_model.py  partition.py
psqlextra/backend/migrations/state/: __init__.py  materialized_view.py  model.py  partitioning.py  view.py
psqlextra/backend/side_effects/: __init__.py  hstore_required.py  hstore_unique.py
psqlextra/contrib/: README.md  __init__.py  expressions.py  model_data_migrator.py  static_row.py  transaction.py
psqlextra/contrib/category_current_time/: __init__.py  category_current_time_strategy.py  partition.py  shorthands.py
psqlextra/fields/: __init__.py  hstore_field.py
psqlextra/indexes/: __init__.py  case_insensitive_unique_index.py  conditional_unique_index.py  unique_index.py
psqlextra/introspect/: __init__.py  fields.py  models.py
psqlextra/management/commands/: pgautopartition.py  pgmakemigrations.py  pgpartition.py  pgrefreshmv.py
psqlextra/manager/: __init__.py  manager.py  materialized_view.py
psqlextra/migrations/: state.py
psqlextra/migrations/operations/: __init__.py  add_default_partition.py  add_list_partition.py  add_partition.py  add_range_partition.py  create_partitioned_model.py  delete_default_partition.py  delete_partition.py  delete_partitioned_model.py  delete_range_partition.py
psqlextra/models/: __init__.py  base.py  options.py  partitioned.py  view.py
psqlextra/partitioning/: __init__.py  config.py  constants.py  current_time_strategy.py  delete_on_condition_strategy.py  error.py  manager.py  partition.py  partitioning_method.py  plan.py  range_partition.py  range_strategy.py  shorthands.py  strategy.py  time_partition.py  time_partition_size.py  time_strategy.py
requirements/: analysis.txt  base.txt  docs.txt  test.txt
tests/: conftest.py  db_introspection.py  fake_model.py  migrations.py  test_add_check_constraint_concurrently.py  test_append_caller_to_sql.py  test_auto_partition.py  test_case_insensitive_unique_index.py  test_conditional_unique_index.py  test_db_backend.py  test_hstore_autodetect.py  test_hstore_field.py  test_hstore_required.py  test_hstore_unique.py  test_insert.py  test_introspect.py  test_localized_bleach_field.py  test_localized_field.py  test_localized_field_form.py  test_localized_field_widget.py  test_localized_model.py  test_localized_slug_fields.py  test_locking.py  test_lookups.py  test_make_migrations.py  test_management_command_partition.py  test_manager.py  test_manager_context.py  test_materialized_view.py  test_materialized_view_migration.py  test_materialized_view_model.py  test_migration_chain_actions.py  test_migration_configurable_actions.py  test_migration_configurable_timeout.py  test_migration_monitored.py  test_migration_operations.py  test_migration_timeout.py  test_on_conflict.py  test_on_conflict_nothing.py  test_on_conflict_update.py  (+22 more)
tests/__snapshots__/test_management_command_partition/: test_management_command_partition_auto_confirm[y].json  test_management_command_partition_confirm_no[no].json  test_management_command_partition_confirm_no[title_no].json  test_management_command_partition_confirm_yes[y].json  test_management_command_partition_confirm_yes[yes].json  test_management_command_partition_dry_run[d].json
tests/benchmarks/: test_insert_nothing.py  test_upsert.py  test_upsert_bulk.py
tests/psqlextra_test_backend/: base.py
tests/snapshots/: snap_test_management_command_partition.py
